--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 django-stubs = "^5.0.0"
+mypy = "^1.10.0"
 
 [build-system]
 requires = ["poetry-core"]
