--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,13 @@ readme = "README.md"
 python = "^3.12"
 django = "^5.0.4"
 python-dotenv = "^1.0.1"
+html5lib = "^1.1"
 
 
 [tool.poetry.group.dev.dependencies]
 django-stubs = "^5.0.0"
 mypy = "^1.10.0"
+types-html5lib = "^1.1.11.20240228"
 
 [build-system]
 requires = ["poetry-core"]
