--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ django-stubs = "^5.0.0"
 mypy = "^1.10.0"
 types-html5lib = "^1.1.11.20240228"
 babel = "^2.15.0"
+pylint = "^3.2.1"
+pylint-django = "^2.5.5"
+pylint-django-settings = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
