--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ babel = "^2.15.0"
 pylint = "^3.2.1"
 pylint-django = "^2.5.5"
 pylint-django-settings = "^1.0.0"
+flake8 = "^7.0.0"
 
 [build-system]
 requires = ["poetry-core"]
